<resources>
    <string name="app_name">ArtBookFragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_art_name">Enter Art Name</string>
    <string name="enter_artist_name">Enter Artist Name</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="enter_year">Enter Year</string>
</resources>